<?xml version="1.0"?>
<package>
  <name>moveit_sim_controller</name>
  <version>0.2.0</version>
  <description>A simulation interface for a hardware interface for ros_control, and loads default joint values from SRDF</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/moveit_sim_controller</url>
  <url type="butracker">https://github.com/davetcoleman/moveit_sim_controller/issues</url>
  <url type="repository">https://github.com/davetcoleman/moveit_sim_controller/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>ros_control_boilerplate</build_depend>
  <build_depend>rosparam_shortcuts</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>ros_control_boilerplate</run_depend>
  <run_depend>rosparam_shortcuts</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
